[tool.poetry]
name = "solvedac_community"
version = "1.0.0"
description = "An API Wrapper for SolvedAC API"
authors = ["DevRuby <hiveruby@gmail.com>"]
readme = "README.md"
packages = [{include = "solvedac_community"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
